<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/White"
            android:textSize="@dimen/h2"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtviewBackCust"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:gravity="center"
            android:text="Back"
            android:textColor="@color/White"
            android:textSize="@dimen/h2" />
    </LinearLayout>

    <!--Search Text Customer-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/padding1"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/titleSearch"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/h2" />

        <EditText
            android:id="@+id/txtSearchCSName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:hint="@string/hintCSname"
            android:textSize="@dimen/h3" />

        <Button
            android:id="@+id/btnSearchCSname"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_search_black_36dp" />

    </LinearLayout>

    <!--Title-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal"
        android:padding="@dimen/padding">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/columnCScode"
            android:textColor="@color/White"
            android:textSize="@dimen/h2"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/customerAppoint"
            android:textColor="@color/White"
            android:textSize="@dimen/h2"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/columnAreaName"
            android:textColor="@color/White"
            android:textSize="@dimen/h2"
            android:textStyle="bold" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--Content-->
        <ListView
            android:id="@+id/livCustomer"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </RelativeLayout>
</LinearLayout>